--- a/src/components/form/form.module.css
+++ b/src/components/form/form.module.css
@@ -1,6 +1,6 @@
 .form {
     padding: 1rem ;
-    width: 20rem;
+    width: 25rem;
     max-width: 100%;
     min-height: 15rem;  
     display: flex;
@@ -8,11 +8,20 @@
     justify-content: space-between;
     gap: .5rem;
     font-size: 1.1em;
-
+    height: 30rem;
 }
 
 .submitBtn{
     background-color: var(--black-color);
     color: var(--white-color)
 }
+
+.dateContainer {
+    flex-basis: 0;
+    flex-grow: 1;
+    display: flex;
+    gap: 1rem;
+}
+
+
 
