--- a/src/components/input/input.module.css
+++ b/src/components/input/input.module.css
@@ -10,16 +10,17 @@
 .label {
   display: block;
   margin-bottom: 0.2rem;
-}
-
-.p {
-  flex-basis: 0;
+  color: var(--white-color)
 }
 
 .container {
-  flex-basis: 6rem;
+  flex-grow:  1;
+  flex-basis: 0;
+  /* min-height:8rem;  */
 }
+
 .warningContainer{
+    /* height: 5rem; */
     margin: .5rem 0;
     background-color:rgb(241, 178, 178);
     list-style: none;
