--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -4,13 +4,17 @@
   width: 100%;
   border-radius: .5rem;
   display: flex;
+  box-shadow: var(--shadow);
 }
 
-.sideBar {
+.leftBar {
   border-right: 1px dotted var(--white-color);
   padding: .5rem;
 }
 
-.grid {
+.mainContent{
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  background-color: burlywood;
 }
