--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -2,19 +2,29 @@
   background: linear-gradient(var(--black-color), var(--black-color));
   height: 100%;
   width: 100%;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   display: flex;
   box-shadow: var(--shadow);
 }
 
 .leftBar {
   border-right: 1px dotted var(--white-color);
-  padding: .5rem;
+  padding: 0.5rem;
 }
 
-.mainContent{
+.mainContent {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  background-color: burlywood;
+}
+
+@media (width <= 768px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .leftBar {
+    border-right: none;
+    border-bottom: 1px dotted var(--white-color);
+  }
 }
