--- a/src/components/sticky-note-card/sticky-note-card.module.css
+++ b/src/components/sticky-note-card/sticky-note-card.module.css
@@ -5,7 +5,6 @@
   height: 15rem;
   box-shadow: var(--shadow);
   border-radius: 0.1rem;
-  background-color: var(--green-color);
   color: var(--black-color);
 
   display: flex;
@@ -14,6 +13,19 @@
   padding: 0.5rem;
   gap: 0.5rem;
   text-overflow: ellipsis;
+  /* background-color: var(--red-color); */
+
+}
+
+.green {
+  background-color: var(--green-color);
+}
+
+.red {
+  background-color: var(--red-color);
+}
+.gray {
+  background-color: gray;
 }
 
 .cardContainer header{
@@ -23,9 +35,11 @@
     align-items: center;
     
 }
+
 .cardContainer header {
     overflow: hidden;
 }
+
 .cardContainer header div {
     display: flex;
     gap: .5rem;
